--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ div {
     background-color: aquamarine;
     color: blue;
 }
+h1{
+    align-content: center;
+}
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
