--- a/Script1.html
+++ b/Script1.html
@@ -6,9 +6,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>El primer script</title>
 
-<script type="text/javascript">
+<script type="text/javascript" src="codigo.js">
 
-    alert("Hola Mundo!");
 
 </script>
 
