Se creo tres archivos .html con nombre script

--- a/Script1.html
+++ b/Script1.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-   
+   <noscript>Esta Pagina <strong>requiere</strong> el uso de javascript desactivado</noscript>
     <p>Esta página contiene el primer script de israel</p>
 
 </body>
