--- a/PaginaWeb_Proy/paginaHTML.html
+++ b/PaginaWeb_Proy/paginaHTML.html
@@ -40,10 +40,13 @@
         <a href="#articulos">Articulos</a>
         <a href="#registro">Registro</a>
         <a href="#notificaciones">Notificaciones</a>
+        
         <input type="text" placeholder="Buscar..." id="search-input">
         <button onclick="buscar()">
         <img src="https://c0.klipartz.com/pngpicture/851/233/gratis-png-boton-de-busqueda-de-iconos-de-computadora-boton-de-busqueda.png" alt="Buscar">
     </button>
+    <a href="login.html">Iniciar Sesión</a>
+        <span id="user-email" style="display: none;"></span>
     </div>
     <script>
         // Obtén la barra de navegación
