Se modifico y actualizo el proyecto

--- a/PaginaWeb_Proy/paginaHTML.html
+++ b/PaginaWeb_Proy/paginaHTML.html
@@ -36,7 +36,7 @@
 
     <div id="compras" class="nav-menu">
         <a href="#inicio">Inicio</a>
-        <a href="#compras" onclick="alert('Ir al carrito de compras');">Compras/Carrito</a>
+        <a href="carrito.html" onclick="alert('Ir al carrito de compras');">Compras/Carrito</a>
         <a href="#articulos">Articulos</a>
         <a href="#registro">Registro</a>
         <a href="#notificaciones">Notificaciones</a>
@@ -74,7 +74,7 @@
             <p style="color: #666;">Disfruta de los juegos taquilleros más recientes de PS4 y exclusivas de PlayStation en sorprendente 4K desde la consola PS4 Pro en tu televisor 4K, y transmite tu entretenimiento favorito con increíble detalle visual desde los servicios compatibles con 4K.</p>
             <p style="color: #666;">Aumenta tu inmersión en los juegos de PS4 con velocidades de cuadro mejoradas* en una variedad de juegos mejorados para PS4 Pro, lo cual es posible gracias a la potencia adicional de la PS4 Pro.</p>
             <p style="color: #f00;">Precio: $3000.00</p>
-            <button onclick="agregarAlCarrito()" style="background-color: #333; color: #fff; padding: 5px 10px;">Agregar al carrito</button>
+            <button onclick="agregarAlCarrito(1)" style="background-color: #333; color: #fff; padding: 5px 10px;">Agregar al carrito</button>
         </div>
 
         <div style="border: 1px solid #ccc; padding: 10px; margin: 10px; width: 30%;">
