--- a/PaginaWeb_Proy/login.html
+++ b/PaginaWeb_Proy/login.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" href="login.css">
     <script src="login.js"></script>
+    
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/css/bootstrap.min.css">
     <title>Iniciar Sesión</title>
 </head>
 <body>
@@ -19,4 +21,6 @@
         </form>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@latest/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
