Se creo modifico codigos de la carpeta de proyecto Carlos

--- a/Proyecto_Carlos/abogados.html
+++ b/Proyecto_Carlos/abogados.html
@@ -100,6 +100,32 @@
     <section id="abogados" class="text-center p-4 mb-4 bg-light rounded">
         <h2>Nuestros Abogados</h2>
         <p>Conozca a nuestro equipo de abogados altamente calificados. Cada miembro de nuestro bufete está dedicado a proporcionar servicios legales de calidad y a abogar enérgicamente por nuestros clientes.</p>
+     <!-- Tabla de Abogados -->
+     <div class="container">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Teléfono</th>
+                    <th>Imagen</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Información de los abogados -->
+                <tr>
+                    <td>Nombre del Abogado 1</td>
+                    <td>123-456-7890</td>
+                    <td><img src="abogado1.jpg" alt="Abogado 1" width="80"></td>
+                </tr>
+                <tr>
+                    <td>Nombre del Abogado 2</td>
+                    <td>987-654-3210</td>
+                    <td><img src="abogado2.jpg" alt="Abogado 2" width="80"></td>
+                </tr>
+                <!-- Puedes agregar más filas según la cantidad de abogados -->
+            </tbody>
+        </table>
+    </div>
     </section>
 
     <footer class="container">
