--- a/Proyecto_Carlos/servicios.html
+++ b/Proyecto_Carlos/servicios.html
@@ -109,27 +109,33 @@
             <li>Representación en Juicios</li>
         </ol>
     </section>
+
     <section id="menu" class="container">
         <h2>Menú de Opciones</h2>
-        <table>
-            <tr>
-                <th>Producto</th>
-                <th>Precio</th>
-            </tr>
-            <tr>
-                <td>Consulta Legal</td>
-                <td>150 bs</td>
-            </tr>
-            <tr>
-                <td>Representación en Juicio</td>
-                <td>200 bs/hora</td>
-            </tr>
-            <tr>
-                <td>Asesoramiento Empresarial</td>
-                <td>180 bs</td>
-            </tr>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Producto</th>
+                    <th scope="col">Precio</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Consulta Legal</td>
+                    <td>150 bs</td>
+                </tr>
+                <tr>
+                    <td>Representación en Juicio</td>
+                    <td>200 bs/hora</td>
+                </tr>
+                <tr>
+                    <td>Asesoramiento Empresarial</td>
+                    <td>180 bs</td>
+                </tr>
+            </tbody>
         </table>
     </section>
+
     <footer class="container">
         <p>&copy; 2023 Bufete Legal TRAN TECH. Todos los derechos reservados.</p>
     </footer>
